Fix nested dependency conflict, use BCryptEncoder
* Using BCryptEncoder to store has of password

Signed-off-by: Kshitij Patil <kshitijpatil98@gmail.com>